--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@ header{
     height: 12vh;
     display: grid;
     grid-column-gap: 1.25rem;
-    grid-template-columns: (13, minmax(0, 1fr));
+    grid-template-columns: repeat(13, minmax(0, 1fr))
 }
 
 header i{
@@ -35,7 +35,7 @@ header i{
     display: flex;
     align-items: center;
     height: 60px;
-    margin: auto 0;
+    margin: 0 60px 0 30px;
     border-radius: 50em;
     background-color: rgb(231, 237, 244);
     &:hover{
@@ -78,9 +78,6 @@ input{
         background-color: rgb(205, 213, 221);
     }
 
-}
-.navLogIn p{
-    margin-bottom: 0;
 }
 
 .navIcons {
