--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -30,17 +30,18 @@ header i{
     letter-spacing: 0.75px;
 }
 
-.search_box{
+.searchBox{
     flex-grow: 1;
     display: flex;
     align-items: center;
     height: 60px;
-    margin: 0 60px 0 30px;
+    margin: 0 4vw 0 2vw;
     border-radius: 50em;
     background-color: rgb(231, 237, 244);
     &:hover{
         background-color: rgb(205, 213, 221);
     }
+    
 }
 
 input{
@@ -53,7 +54,7 @@ input{
     outline: none;
 }
 
-.search_box i{
+.searchBox i{
     padding: 17px 25px 13px 10px;
     font-size: 20px;
     border-radius:  0 50em 50em 0;
@@ -74,6 +75,7 @@ input{
     padding-right: 10px;
     padding-left:  2.5px;
     border-radius: 50em;
+    height: 37.5px;
     &:hover{
         background-color: rgb(205, 213, 221);
     }
@@ -84,4 +86,64 @@ input{
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.sideMenuRight{
+    visibility: hidden;
+}
+
+@media screen and (max-width: 1000px){
+    .headBarContainer{
+        grid-column: 1/14;
+        padding: 0 48px;
+    }
+    
+    .searchBox{
+        margin: 0 10px;
+    }
+    .navLogIn{
+        padding: 0;
+
+    }
+    .navLogIn strong{
+        visibility: hidden;
+        width: 0;
+    }
+    .sideMenuRight{
+        visibility: visible;
+        position: relative;
+    }
+    .sideMenuRight strong{
+        visibility: hidden;
+        height: 0;
+    }
+    .sideMenuLeft{
+        visibility: hidden;
+    }
+}
+
+@media screen and (max-width: 700px){
+    header{
+        height: 17vh
+    }
+    .headBarContainer{
+        display: grid;
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        grid-template-rows: 7vh 10vh;
+        padding: 0 20px;
+    }
+    .headBarContainer img{
+        grid-row: 1/2;
+    }
+    .navIcons{
+        grid-row: 1/2;
+        grid-column: 3/6;
+        justify-content: end;
+        gap: 3px;
+    }
+    .searchBox{
+        margin: 0;
+        grid-row: 2/3;
+        grid-column: 1/6;
+    }
 }
