--- a/src/components/MainContent/ItemListContainer/ItemListContainer.css
+++ b/src/components/MainContent/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,7 @@
 main{
     display: grid;
     grid-column-gap: 1.25rem;
-    grid-template-columns: (13, minmax(0, 1fr));
+    grid-template-columns: repeat(13, 1fr);
 }
 .mainContainer{
     grid-column: 2/14;
