--- a/src/components/NavBar/SideMenu/SideMenu.css
+++ b/src/components/NavBar/SideMenu/SideMenu.css
@@ -48,7 +48,7 @@ ul{
     list-style: none;
     margin-left: 80px;
 }
-ul li a{
+ul li{
     text-decoration: none;
     color: black;
     &:hover{
