--- a/src/components/MainContent/Item/Item.css
+++ b/src/components/MainContent/Item/Item.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 15vh;
 }
 .items img {
     width: 100%;
