--- a/src/components/MainContent/ItemDetail/ItemDetail.css
+++ b/src/components/MainContent/ItemDetail/ItemDetail.css
@@ -1,3 +1,101 @@
 .itemDetail{
     grid-column: 2/14;
+    display: grid;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    column-gap: 1.25rem;
+    padding-right: 2.5rem;
+}
+
+.itemDetalImgs{
+    grid-column: 1/9;
+}
+
+.itemDetailInfo{
+    grid-column: 9/13;
+    padding: 0 2.5rem;
+}
+
+.topInfoContainter{
+    display: flex;
+    justify-content: space-between;
+}
+.nameDescContainer{
+    width: 80%;
+}
+.nameDescContainer h5{
+    font-weight: bold;
+    margin-bottom: 0;
+}
+.nameDescContainer p{
+    font-size: 20px;
+    color: rgb(79, 79, 79);
+    margin-bottom: 0;
+}
+.topInfoContainter i {
+    height: 37px;
+    font-size: 20px;
+    padding: 7.5px 7.5px 0 7.5px;
+    border-radius: 50em;
+    &:hover{
+        background-color: rgb(232, 237, 241);
+    }
+}
+.priceContainer{
+    display: flex;
+}
+.priceContainer i{
+    padding-top: 7px;
+    font-size: 10px;
+}
+.priceContainer h3{
+    padding-left: 3px;
+    font-weight: bold;
+    font-size: 30px;
+}
+.howToGetItContainter{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(214, 214, 214);
+    border-radius: 8px;
+    padding: 0 20px;
+}
+.howToGetItComponent{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+.howToGetItComponent i{
+    font-size: 22px;
+    
+}
+.howToGetItWrapper{
+    display: flex;
+}
+.howToGetItInfo{
+    padding: 0 20px;
+}
+.howToGetItInfo p{
+    margin: 0;
+}
+.howToGetItLine{
+    height: 0.5px;
+    background-color: rgb(214, 214, 214);
+    margin: 0 1rem;
+}
+.counterDetails a{
+    text-decoration: none;
+    border-radius: 64px;
+    width: 100%;
+    background-color: rgb(0, 88, 163);
+    border: none;
+    color: white;
+    font-weight: bold;
+    padding: 16px 0px;
+}
+.counterDetails{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
