--- a/src/components/NavBar/CartWidget/CartWidget.css
+++ b/src/components/NavBar/CartWidget/CartWidget.css
@@ -1,9 +1,13 @@
 
-.cartWidget {
+.cartWidget a {
     padding-right: 20px;
     display: flex;
     align-items: center;
     gap: 15px;
+}
+.cartWidget a {
+    text-decoration: none;
+    color: black;
 }
 @keyframes UpAndDown {
     0%, 40%, 60%, 100% {
@@ -13,7 +17,7 @@
     transform: translateY(-6px);
     }
 }
-.cartWidget p{
+.cartWidget a div p{
     position: absolute;
     display: flex;
     border-radius: 50em;
@@ -29,7 +33,7 @@
     animation: UpAndDown 5s infinite;
     animation-delay: 2s;
 }
-.cartWidget div{
+.cartWidget a div{
     width: 35px;
     height: 37.5px;
     position: absolute;
