--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 *{
     font-family: 'Signika Negative', sans-serif;
 }
+main{
+    display: grid;
+    grid-column-gap: 1.25rem;
+    grid-template-columns: repeat(13, 1fr);
+}
+.mainContainer{
+    grid-column: 2/14;
+}
