--- a/src/components/MainContent/Item/Item.css
+++ b/src/components/MainContent/Item/Item.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 15vh;
+    margin-bottom: 4vw;
+    min-width: 250px;
 }
 .items img {
     width: 100%;
