--- a/src/components/MainContent/ItemList/ItemList.css
+++ b/src/components/MainContent/ItemList/ItemList.css
@@ -1,7 +1,7 @@
 .items {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 3%;
     grid-column: 2/14;
