--- a/src/components/MainContent/CartItem/CartItem.css
+++ b/src/components/MainContent/CartItem/CartItem.css
@@ -1,7 +1,7 @@
 .cartItem{
     display: flex;
     width: 100%;
-    margin-top: 10vh;
+    margin-top: 2vh;
 
 }
 .cartItem hr{
@@ -14,7 +14,7 @@
     align-items: center;
 }
 .cartItemImg img{
-    width: 140px;
+    width: 150px;
 }
 .cartItemImg strong{
     background-color: lightgrey;
@@ -59,4 +59,11 @@
     align-items: center;
     margin: 0;
     color: grey;
+}
+
+
+@media screen and (max-width: 900px){
+    .itemOptions>p{
+        grid-template-columns: repeat 2fr;
+    }
 }
