--- a/src/components/MainContent/Checkout/Checkout.css
+++ b/src/components/MainContent/Checkout/Checkout.css
@@ -1,5 +1,4 @@
 .cartContainer form{
-    
     grid-column: 1/8;
 }
 .cartContainer>hr{
@@ -40,7 +39,7 @@
 @media screen and (max-width: 900px){
     .cartContainer form{
         grid-column: 1/13;
-        margin-left: -60px;
+        margin-left: -5vw;
         margin-right: 10px;
     }
     .cartContainer>hr{
