--- a/src/components/MainContent/ItemDetail/ItemDetail.css
+++ b/src/components/MainContent/ItemDetail/ItemDetail.css
@@ -20,6 +20,9 @@
 .itemDetailInfo{
     grid-column: 9/13;
     padding: 0 2.5rem;
+    position: sticky;
+    max-height: calc(100vh - 20px);
+    top: 20px;
 }
 
 .topInfoContainter{
